@@ -1,0 +1,61 @@
+#
+# Copyright (C) 2001-2004 by egnite Software GmbH. All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions
+# are met:
+#
+# 1. Redistributions of source code must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+# 2. Redistributions in binary form must reproduce the above copyright
+#    notice, this list of conditions and the following disclaimer in the
+#    documentation and/or other materials provided with the distribution.
+# 3. All advertising materials mentioning features or use of this
+#    software must display the following acknowledgement:
+#
+#    This product includes software developed by egnite Software GmbH
+#    and its contributors.
+#
+# THIS SOFTWARE IS PROVIDED BY EGNITE SOFTWARE GMBH AND CONTRIBUTORS
+# ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+# FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL EGNITE
+# SOFTWARE GMBH OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+# BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
+# OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+# AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
+# THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+# SUCH DAMAGE.
+#
+# For additional information see http://www.ethernut.de/
+#
+# $Log: Makefile,v $
+# Revision 1.1  2004/09/19 11:23:12  haraldkipp
+# Syslog/SNTP application added
+#
+#
+
+PROJ = logtime
+
+include ../Makedefs
+
+SRCS =  $(PROJ).c
+OBJS =  $(SRCS:.c=.o)
+LIBS =  $(LIBDIR)/nutinit.o -lnutpro -lnutnet -lnutpro -lnutfs -lnutos -lnutdev -lnutnet -lnutcrt
+TARG =  $(PROJ).hex
+PARM =  $(PROJ).eep
+
+all: $(OBJS) $(TARG)
+
+include ../Makerules
+
+clean:
+	-rm -f $(OBJS)
+	-rm -f $(TARG)
+	-rm -f $(PROJ).eep
+	-rm -f $(PROJ).obj
+	-rm -f $(PROJ).map
+	-rm -f $(SRCS:.c=.lst)
+	-rm -f $(SRCS:.c=.bak)
